# streamy-v4

./: .cproject  .gdbinit  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.bak  a.out  compile_commands.json  init.lua  log.txt  makefile  makefile.2  match_all.sh  match_all.shes  out.txt  out2.txt  qwerty.out  qwerty.txt  run.txt  sed  settings.json  streamy.workspace  test.txt  tmp
.cache/clangd/index/: main.cpp.03FB81DC9053E9CD.idx
.codelite/: streamy.session
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
cbuild/: CMakeCache.txt
cbuild/.cmake/api/v1/reply/: error-2026-03-30T19-33-08-0831.json
doc/: bison_fromat.txt  boost_defs.h  c.character_set.txt  funcs.txt  regex_groups.txt
doc/arc/: ParseTree.hpp  SymbolTable.cpp  SymbolTable.hpp  bash_color.h  bash_color.hpp  def.c  def.h  if.y  lex.yy.c  pars.h  streamy.hpp  streamy3_test.hpp  strm_handle.cpp
doc/arc/code/: c++-types.c  c++-types.h  c++-types.tab.c  c++-types.tab.hh
script/: get_trace.sh  my_theme.jsonc  tmp_trace.txt
src/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  SmartPtr.cpp  SmartPtr.hpp  TEST_assign.cpp  TEST_assign.hpp  TEST_general.cpp  TEST_general.hpp  TEST_lex.cpp  TEST_lex.hpp  ast.cpp  ast.h  ast.hpp  auto_ptr.cpp  auto_ptr.hpp  bash_color.hpp  config.h  config.hpp  constants.hpp  context.cpp  context.hpp  cygwin.hpp  debug.cpp  debug.hpp  definitions.hpp  driver.cpp  driver.h  driver.hpp  fileio.cpp  fileio.hpp  findt.sh  index.cpp  index.hpp  index2.cpp  index2.hpp  index3.cpp  index3.hpp  infile.c  io.cpp  (+30 more)
test/: BNF.bnf  a.txt  bash_color.hpp  clparser.cpp  comment_section.txt  config.txt  config_match.txt  copy.txt  cuts.txt  cuts2.txt  files.txt  if.txt  input.c  lexer_tester.tpl  match_everything.sh  modifier_snip.txt  out.txt  parser_defs_c_types.h  qwerty.html  qwerty.txt  scan.txt  scan2.txt  scan3.txt  sl.txt  streamy.cpp  t.txt  test.l  test.out.txt  test.txt  test0.txt  test1.txt  test10.txt  test2.txt  test3.txt  test5.txt  test6.txt  test7.txt  test8.txt  test_assign.txt  token_type_const.txt  (+1 more)
test/arc/: CMakeList2.txt  Lexer.cpp.bak  ParseTree.cpp  constants.hpp  lex_config.hpp  makefile.2  pcxx.yy  process_strm.cpp  process_strm.hpp  streamy3_test.cpp  tokens.hpp.bak
test/arc/code/: c++-types.tab.cc  c++-types.tab.h
test/config/: config  config.new.tmp.php  config.php  config.tmp.php  example.conf  index.conf  lex.conf  lexer_tester.conf  music.conf  test.conf  test1.conf  version.php
test/sed/: all_punct.txt  seq.txt  tmp.txt  tmp2.txt  tokout.txt  tsed.txt  txt  txt4  txt6
test/templates/: adv_query.tpl  footer.tpl  header.tpl  home.tpl  index.tpl  lexer_tester.tpl  lyrics.tpl  nav_links.tpl  page_test.tpl  playlists.tpl  query.tpl  results.tpl  test_comments.tpl  test_vars.tpl  toolbar.tpl  toolbar_items.tpl
test/tests/: path_append.cpp  test.txt
test/w2/: txt2
test/work/: txt  txt3
unit_test/: CMakeLists.txt  TEST_assign.cpp  TEST_assign.hpp  TEST_assign_expr.cpp  TEST_assign_expr.hpp  TEST_ast.cpp  TEST_ast.hpp  TEST_expr.cpp  TEST_expr.hpp  TEST_general.cpp  TEST_general.hpp  TEST_lex.cpp  TEST_lex.hpp  TEST_multiply_expr.cpp  TEST_multiply_expr.hpp  TEST_symbol_table.cpp  TEST_symbol_table.hpp  TEST_variant.cpp  TEST_variant.hpp  main.hpp
